--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сайт-портфолио-темная</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
     <div class="header">
-      <div class="container">
+      <div class="container header__container">
         <div class="download-pdf">
-          <a href="#" class="download-pdf__title">
+
+          <a href="#" class="download-pdf__link">
+            <i class="fa fa-file-pdf"></i>
             Скачать в pdf
           </a>
         </div>
@@ -93,20 +103,22 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="download-pdf">
-        <a href="#" class="download-pdf__title">
-          Скачать в pdf
-        </a>
-      </div>
-      <div class="icons">
-        <ul class="icons__list">
-          <li class="icons__item"></li>
-          <li class="icons__item"></li>
-          <li class="icons__item"></li>
-          <li class="icons__item"></li>
-          <li class="icons__item"></li>
-          <li class="icons__item"></li>
-        </ul>
+      <div class="container">
+        <div class="download-pdf">
+          <a href="#" class="download-pdf__title">
+            Скачать в pdf
+          </a>
+        </div>
+        <div class="icons">
+          <ul class="icons__list">
+            <li class="icons__item"></li>
+            <li class="icons__item"></li>
+            <li class="icons__item"></li>
+            <li class="icons__item"></li>
+            <li class="icons__item"></li>
+            <li class="icons__item"></li>
+          </ul>
+        </div>
       </div>
     </footer>
     
