--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="tablet.css" media="screen and (max-width: 768px)">
+  <link rel="stylesheet" href="phone.css" media="screen and (max-width: 361px)">
 </head>
 <body>
   <div class="wrapper">
@@ -74,30 +76,30 @@
           </div>
         </section>
 
-        <section class="desc">
+        <section class="desc desc__container">
           <ul class="desc__list">
             <li class="desc__item">
                <h2 class="title desc__title">О себе</h2> 
                <p class="desc__text">
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eaque alias maxime neque voluptatibus consequatur molestiae, reprehenderit mollitia omnis quibusdam molestias, repellat velit itaque cumque nihil nisi! Mollitia, itaque quia?
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
                </p>
             </li>
             <li class="desc__item">
-              <h2 class="title">Достижения</h2> 
+              <h2 class="title desc__title">Достижения</h2> 
               <p class="desc__text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eaque alias maxime neque voluptatibus consequatur molestiae, reprehenderit mollitia omnis quibusdam molestias, repellat velit itaque cumque nihil nisi! Mollitia, itaque quia?
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
               </p>
             </li>
             <li class="desc__item">
-              <h2 class="title">Увлечение</h2> 
+              <h2 class="title desc__title">Увлечение</h2> 
               <p class="desc__text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eaque alias maxime neque voluptatibus consequatur molestiae, reprehenderit mollitia omnis quibusdam molestias, repellat velit itaque cumque nihil nisi! Mollitia, itaque quia?
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
               </p>
             </li>
             <li class="desc__item">
-              <h2 class="title">Образование</h2> 
+              <h2 class="title desc__title">Образование</h2> 
               <p class="desc__text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eaque alias maxime neque voluptatibus consequatur molestiae, reprehenderit mollitia omnis quibusdam molestias, repellat velit itaque cumque nihil nisi! Mollitia, itaque quia?
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
               </p>
             </li>
         
@@ -111,7 +113,7 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
-        <div class="download-pdf">
+        <div class="download-pdf download-pdf__footer">
           <a href="#" class="download-pdf__link">
             <i class="fa fa-file-pdf"></i>
             <span class="download-pdf__text">Скачать в pdf</span>
