--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="wrapper">
     <div class="header">
       <div class="container header__container">
-        <div class="download-pdf">
+        <div class="download-pdf--visible">
 
           <a href="#" class="download-pdf__link">
             <i class="fa fa-file-pdf"></i>
@@ -28,7 +28,7 @@
             
           </a>
         </div>
-        <h1 class="username">Рашид Касимов</h1>
+        <h1 class="username username__name">Рашид Касимов</h1>
         <div class="contacts">
           <a href="tel:8-999-999-99-99" class="contacts__phone">9 999 999 99 99</a>
           <a href="mailto: mail@mail.ru" class="contacts__mail">mail@mail.ru</a>
@@ -81,25 +81,25 @@
             <li class="desc__item">
                <h2 class="title desc__title">О себе</h2> 
                <p class="desc__text">
-                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. 
                </p>
             </li>
             <li class="desc__item">
               <h2 class="title desc__title">Достижения</h2> 
               <p class="desc__text">
-                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. 
               </p>
             </li>
             <li class="desc__item">
               <h2 class="title desc__title">Увлечение</h2> 
               <p class="desc__text">
-                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. 
               </p>
             </li>
             <li class="desc__item">
               <h2 class="title desc__title">Образование</h2> 
               <p class="desc__text">
-                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. 
               </p>
             </li>
         
